fix sections going out of bounds when there are too many

--- a/src/styles.css
+++ b/src/styles.css
@@ -4,18 +4,19 @@ body {
   font-size: 20px;
   background: #fafafa;
   color: #222;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
-div {
-  text-align: center;
-  padding: 40px;
+#container {
+  min-height: 100vh;
   max-width: 600px;
-  width: 100%;
+  margin: 0 auto;
+  padding: 40px;
   box-sizing: border-box;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
 }
 
 h1 {
